add another endpoints in swagger
