# BaristaTrainingAppBackend/pkg/handler/course.go
@@ -1,20 +1,22 @@
 package handler
 
 import (
+	"barTrApp/pkg/model"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type Course struct {
-	Id            int    `json:"-"`
-	Name          string `json:"name" binding:"required"`
-	Description   string `json:"description" binding:"required"`
-	Passing_Score int    `json:"passing_score" binding:"required"`
-}
-
+// @Summary Courses
+// @Tags api
+// @Description courses list
+// @ID courses
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string "token"
+// @Router /api/courses [get]
 func (h *Handler) getCourses(c *gin.Context) {
-	courses := []Course{
+	courses := []model.CourseResponse{
 		{Id: 1, Name: "Стажировка", Description: "курс для того чтобы приступить к стажировке", Passing_Score: 8},
 		{Id: 2, Name: "Бариста", Description: "курс для того чтобы приступить к работе бариста", Passing_Score: 9},
 		{Id: 3, Name: "Менеджер", Description: "курс для того чтобы приступить к работе менеджера", Passing_Score: 10},
