# BaristaTrainingAppBackend/pkg/handler/information.go
@@ -1,19 +1,22 @@
 package handler
 
 import (
+	"barTrApp/pkg/model"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type Information struct {
-	Id    int    `json:"-"`
-	Theme string `json:"theme" binding:"required"`
-	Text  string `json:"text" binding:"required"`
-}
-
+// @Summary Information
+// @Tags api
+// @Description information list
+// @ID information
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string "token"
+// @Router /api/information [get]
 func (h *Handler) getInformations(c *gin.Context) {
-	informations := []Information{
+	informations := []model.InformationResponse{
 		{Id: 1, Theme: "Основы", Text: "Латте это кофе с молоком и молочной пеной"},
 		{Id: 2, Theme: "Пропорции", Text: "3 молока : 1 кофе"},
 		{Id: 3, Theme: "Сиропы", Text: "В нашей сети кофеен есть только миндальный сироп"},
