# BaristaTrainingAppBackend/pkg/handler/lesson.go
@@ -1,20 +1,22 @@
 package handler
 
 import (
+	"barTrApp/pkg/model"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type Lesson struct {
-	Id            int    `json:"id"`
-	Name          string `json:"name" binding:"required"`
-	Description   string `json:"description" binding:"required"`
-	Passing_Score int    `json:"passing_score"`
-}
-
+// @Summary Lessons
+// @Tags api
+// @Description Lessons list
+// @ID lessons
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string "token"
+// @Router /api/lessons [get]
 func (h *Handler) getLessons(c *gin.Context) {
-	lessons := []Lesson{
+	lessons := []model.LessonResponse{
 		{Id: 1, Name: "Как варить кофе", Description: "Изготовление разных видов кофе", Passing_Score: 8},
 		{Id: 2, Name: "Клиентоориентированность", Description: "Как общаться c клиентами", Passing_Score: 8},
 		{Id: 3, Name: "Стрессоустойчивость", Description: "Умение справляться в стрессовых ситуациях", Passing_Score: 8},
