# BaristaTrainingAppBackend/pkg/handler/test.go
@@ -1,20 +1,22 @@
 package handler
 
 import (
+	"barTrApp/pkg/model"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type Test struct {
-	Id          int    `json:"-"`
-	Theme       string `json:"theme" binding:"required"`
-	Description string `json:"description" binding:"required"`
-	Role_id     int    `json:"role_id" binding:"required"`
-}
-
+// @Summary Tests
+// @Tags api
+// @Description tests list
+// @ID tests
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string "token"
+// @Router /api/tests [get]
 func (h *Handler) getTests(c *gin.Context) {
-	tests := []Test{
+	tests := []model.TestResponse{
 		{Id: 1, Theme: "Латте", Description: "Тест по приготовлению латте", Role_id: 1},
 	}
 
